[package]
name = "dcmimu"
version = "0.2.2-alpha.0"
authors = ["Alexander Zhuravlev", "Roma Sokolov"]
description = "no_std DCM IMU implementation"
keywords = ["no_std", "dcm", "imu", "kalman", "sensor-fusion"]
categories = ["embedded", "hardware-support", "no-std", "navigation"]
license = "MIT"
repository = "https://github.com/copterust/dcmimu"
readme = "Readme.md"

[dependencies]
libm = "0.1.2"

[dev-dependencies]
csv = "1.0.0"
ryu = "0.2"
