[package]
name = "dcmimu"
version = "0.2.5"
authors = ["Alexander Zhuravlev", "Roma Sokolov"]
description = "no_std DCM IMU implementation"
keywords = ["no_std", "dcm", "imu", "kalman", "sensor-fusion"]
categories = ["embedded", "hardware-support", "no-std", "aerospace::drones", "aerospace::unmanned-aerial-vehicles"]
license = "MIT"
repository = "https://github.com/copterust/dcmimu"
readme = "README.md"
edition = "2021"

[dependencies]
libm = "0.2.11"

[dev-dependencies]
csv = "1.0.0"
ryu = "0.2"
